[gd_scene load_steps=8 format=3 uid="uid://b8ymxhj8qj847"]

[ext_resource type="Texture2D" uid="uid://cbwg5fmvpks7" path="res://img/Tektike.png" id="1_5nejp"]
[ext_resource type="Script" path="res://Scrips/enemy_Red.gd" id="1_c1kdy"]
[ext_resource type="Texture2D" uid="uid://df3yj63gh1527" path="res://img/cursor.png" id="2_lsbqa"]

[sub_resource type="Animation" id="Animation_e2alh"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.973483, 0.155532, 0.0666511, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_as2vt"]
resource_name = "idle_MosterR"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nrryh"]
_data = {
"RESET": SubResource("Animation_e2alh"),
"idle_MosterR": SubResource("Animation_as2vt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a20pc"]
size = Vector2(74, 60)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_c1kdy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(152, 141.394)
scale = Vector2(3.51768, 4.0292)
texture = ExtResource("1_5nejp")
hframes = 13
vframes = 5

[node name="Node2D" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Node2D"]
offset_left = 145.0
offset_top = 154.0
offset_right = 182.0
offset_bottom = 177.0
text = "2
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nrryh")
}

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 96.0
offset_top = 97.3942
offset_right = 195.0
offset_bottom = 124.394
show_percentage = false

[node name="Cursor" type="Sprite2D" parent="."]
position = Vector2(234, 172)
rotation = 6.28319
scale = Vector2(0.659377, 0.560798)
texture = ExtResource("2_lsbqa")
flip_h = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(148, 162)
shape = SubResource("RectangleShape2D_a20pc")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
